--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO=mongodb://localhost:27017/schoolmng
-JWT_SECRET=n9JU0zRyF0
-PORT=3000
+#MONGO=mongodb://localhost:27017/schoolmng
+#JWT_SECRET=n9JU0zRyF0
+#PORT=3000
